# agentpalette

./: .gitignore  package.json
docs/superpowers/plans/: 2026-07-06-skills-management.md  2026-07-07-skill-custom-description.md  2026-07-13-harness-language-localization.md  2026-07-13-project-harness-application.md  2026-07-13-project-harness-redesign-plan.md  2026-07-18-performance-optimization.md
docs/superpowers/specs/: 2026-07-07-skill-custom-description-design.md  2026-07-07-skill-custom-description-hidden-apis.md  2026-07-07-skill-deletion-confirmation-design.md  2026-07-07-skill-pack-detail-layout-design.md  2026-07-09-git-skill-import-identity-design.md  2026-07-09-harness-template-management-design.md  2026-07-13-harness-language-localization-design.md  2026-07-13-project-harness-application-design.md  2026-07-13-project-harness-redesign-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 002_skills.sql  004_skill_descriptions.sql  005_harness_templates.sql  007_project_harnesses.sql
src-tauri/src/: lib.rs
src-tauri/src/application/: agent_service.rs  harness_service.rs  mod.rs  project_harness_service.rs  skill_scanner.rs  skill_service.rs
src-tauri/src/commands/: harnesses.rs  health.rs  mod.rs  projects.rs  skills.rs
src-tauri/src/domain/: harness.rs  harness_presets.rs  mod.rs  ports.rs  project.rs  project_harness.rs  skill.rs
src-tauri/src/infrastructure/: database.rs  markdown.rs  mod.rs
src/app/: router.tsx
src/app/layout/: AppShell.test.tsx  AppShell.tsx  ProjectSidebar.tsx  (+1 more)
src/features/: routes.test.tsx
(+39 files in other folders)
