[package]
name = "agentforge"
version = "0.1.0"
description = "Local AI engineering workbench"
authors = ["AgentForge contributors"]
edition = "2021"

[lib]
name = "agentforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
pulldown-cmark = "0.10"
yaml-front-matter = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

